--- a/TrashCollectorProject/TrashCollectorProject.csproj
+++ b/TrashCollectorProject/TrashCollectorProject.csproj
@@ -228,6 +228,10 @@
     <Compile Include="Migrations\201801091553386_updateEmployeeDatabaseInfo.Designer.cs">
       <DependentUpon>201801091553386_updateEmployeeDatabaseInfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801091620328_addedCustomerRemovalFee.cs" />
+    <Compile Include="Migrations\201801091620328_addedCustomerRemovalFee.Designer.cs">
+      <DependentUpon>201801091620328_addedCustomerRemovalFee.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -338,6 +342,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801091553386_updateEmployeeDatabaseInfo.resx">
       <DependentUpon>201801091553386_updateEmployeeDatabaseInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801091620328_addedCustomerRemovalFee.resx">
+      <DependentUpon>201801091620328_addedCustomerRemovalFee.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
